Removed parallax. Fixed team issues on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -38,10 +38,6 @@ h2 {
   text-transform: uppercase;
 }
 
-h3 {
-  line-height: 36px;
-}
-
 h5 {
     letter-spacing: 1px;
     padding-top: 10px;
@@ -569,6 +565,15 @@ footer {
     font-size: 16px;
     margin-bottom: 0px;
 		color: white;
+}
+
+@media (max-width: 370px) {
+	#speakers h3 {
+		font-size: 12px;
+	}
+	#speakers h6 {
+		font-size: 10px;
+	}
 }
 
 #speakers h6 {
